--- a/main.tex
+++ b/main.tex
@@ -39,7 +39,7 @@
 
 \subfile{abstract}
 \subfile{introduction}
-%\subfile{bellman_control}
+\subfile{bellman_control}
 %\subfile{control_comparison}
 % \subfile{expected_utility}
 % \subfile{conclusion}
