--- a/introduction.tex
+++ b/introduction.tex
@@ -17,11 +17,7 @@
   \end{itemize}
 \item Problem formulation and optimal control
   \begin{itemize}
-  \item Definition, in words and in mathematics
-  \item Dynamic programming principle, Bellman-equation
-  \item Plot policies
-  \item Plot distribution of profits
-  \item Plot pricing curves: average + quantiles
+  \item Plot distribution of profits (next to pricing evolution)
   \end{itemize}
 \item Approximations
   \begin{itemize}
