--- a/main.tex
+++ b/main.tex
@@ -42,6 +42,7 @@
 \subfile{introduction}
 \subfile{bellman_control}
 \subfile{control_comparison}
+% \subfile{model_uncertainty}
 % \subfile{expected_utility}
 % \subfile{conclusion}
 
