First draft CEC section

--- a/bellman_control.tex
+++ b/bellman_control.tex
@@ -16,6 +16,7 @@
 \listoftodos
 
 \section{The optimal control problem}
+\todo[inline]{Say that we choose to be risk-neutral}
 The overarching goal in the paper is to consider solutions to a retail
 pricing problem.
 \begin{mydef}[Pricing problem, informal]
